test/libyul/yulSyntaxTests/for_expr_invalid_5.yul
{
	for {} mload {} {}
}
// ----
// ParserError 7104: (16-17): Builtin function "mload" must be called.
